--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using Dotnet9.Web.Utils
+﻿@using Dotnet9.Web.ViewModels.Blogs
+@using Dotnet9.Web.Utils
 @model Dotnet9.Application.Contracts.Blogs.BlogPostViewModel
 @{
     ViewData["Title"] = Model.BlogPost.Title;
@@ -24,7 +25,12 @@
         <div class="card">
             <div class="card-body">
                 <div class="page-aside-left">
-                    @await Html.PartialAsync("/Views/BlogPost/BlogPostSidebar.cshtml")
+                    @await Html.PartialAsync("/Views/Home/ShortAdsSidebar.cshtml")
+                    @await Html.PartialAsync("/Views/Home/ContactSidebar.cshtml")
+                    @await Component.InvokeAsync("LatestBlogPosts")
+                    @await Html.PartialAsync("BlogPostList", new BlogPostListViewModel { Name = "相同专辑", Items = Model.SameAlbumBlogPosts })
+                    @await Html.PartialAsync("BlogPostList", new BlogPostListViewModel { Name = "相同分类", Items = Model.SameCategoryBlogPosts })
+                    @await Html.PartialAsync("/Views/Home/BigAdsSidebar.cshtml")
                 </div>
                 <div class="page-aside-right">
 
