Add the search to the 404 page;

--- a/src/Dotnet9.Web/Views/Error/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Error/Index.cshtml
@@ -31,8 +31,7 @@
                                 <p class="text-muted mt-3">
                                     看起来你可能拐错了方向。别担心，这里有一个也许能帮你重回正轨的小建议。
                                 </p>
-
-                                <a class="btn btn-info mt-3" href="/"><i class="mdi mdi-reply"></i> 返回首页</a>
+                                @await Html.PartialAsync("QueryForm")
                             </div> <!-- end /.text-center-->
                         </div> <!-- end col-->
                     </div>
