--- a/src/Dotnet9.Web/Views/BlogPost/BlogPostCardList.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/BlogPostCardList.cshtml
@@ -1,13 +1,16 @@
-﻿@model List<Dotnet9.Application.Contracts.Blogs.BlogPostBriefDto>
+﻿@model List<Dotnet9.Application.Contracts.Blogs.BlogPostBriefDto>?
 
 <div class="row">
     <div class="col-12">
         <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-3">
-            @foreach (var blogPost in Model)
+            @if (Model != null && Model.Any())
             {
-                <div class="col">
-                    @await Html.PartialAsync("/Views/BlogPost/BlogPostCard.cshtml", blogPost)
-                </div>
+                @foreach (var blogPost in Model)
+                {
+                    <div class="col">
+                        @await Html.PartialAsync("/Views/BlogPost/BlogPostCard.cshtml", blogPost)
+                    </div>
+                }
             }
         </div>
     </div> <!-- end col-->
