--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -33,6 +33,7 @@
                     @await Html.PartialAsync("BlogPostList", new BlogPostListViewModel {Name = "相同专辑", Items = Model.SameAlbumBlogPosts})
                     @await Html.PartialAsync("BlogPostList", new BlogPostListViewModel {Name = "相同分类", Items = Model.SameCategoryBlogPosts})
                     @await Html.PartialAsync("/Views/Home/BigAdsSidebar.cshtml")
+                    @await Component.InvokeAsync("TagCloud")
                 </div>
                 <div class="page-aside-right">
 
