--- a/src/Dotnet9.Web/Views/Home/HomeSidebar.cshtml
+++ b/src/Dotnet9.Web/Views/Home/HomeSidebar.cshtml
@@ -1,4 +1,4 @@
 ﻿@await Html.PartialAsync("/Views/Home/ShortAdsSidebar.cshtml")
-@await Html.PartialAsync("/Views/Home/ContactSidebar.cshtml")
+@await Component.InvokeAsync("ContactSidebar")
 @await Component.InvokeAsync("LatestBlogPosts")
 @await Html.PartialAsync("/Views/Home/BigAdsSidebar.cshtml")
