--- a/src/Dotnet9.Web/Views/BlogPost/OtherSidebar.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/OtherSidebar.cshtml
@@ -3,4 +3,5 @@
     @await Component.InvokeAsync("ContactSidebar")
     @await Component.InvokeAsync("LatestBlogPosts")
     @await Html.PartialAsync("/Views/Home/BigAdsSidebar.cshtml")
+    @await Component.InvokeAsync("TagCloud")
 </div>
