--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                                     一个专注.NET的网站，有博文、有免费在线工具
                                 </h3>
                             </div>
-                            <img src="https://img1.dotnet9.com/2022/03/0301.gif" alg="Dotnet9" class="w-50 d-none d-md-block"/>
+                            <img src="~/images/features-2.svg" alg="Dotnet9" class="w-50 d-none d-md-block"/>
                         </div>
                     </section>
 
