--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -82,7 +82,7 @@
                                     @Html.Raw(MarkdownHelper.Render(Model.BlogPost.Content))
                                 </div>
 
-                                <div class="footer-links d-none d-md-block mt-5 mb-5 bg-light">
+                                <div class="footer-links d-none d-md-block mt-5 mb-5 p-2 bg-light">
                                     @switch (Model.BlogPost.CopyrightType)
                                     {
                                         case CopyrightType.Reprint:
