--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -21,8 +21,8 @@
     <!--图片等自适应-->
     <link rel="stylesheet" href="~/css/markdown.css">
     <!--TOC-->
-    <link rel="stylesheet" href="~/tocify/styles/bootstrap.css"/>
-    <link rel="stylesheet" href="~/tocify/jquery.tocify.css"/>
+    @*<link rel="stylesheet" href="~/tocify/styles/bootstrap.css"/>
+    <link rel="stylesheet" href="~/tocify/jquery.tocify.css"/>*@
 }
 
 <div class="row">
@@ -34,8 +34,8 @@
                 </div>
                 <div class="page-aside-right">
                     <div class="container-fluid">
-                        <div class="row-fluid">
-                            <div class="span9">
+                        @*<div class="row-fluid">
+                            <div class="span9">*@
                                 <h1>@Model.BlogPost.Title</h1>
 
                                 <div class="footer-links d-none d-md-block mb-5">
@@ -178,12 +178,12 @@
                                         </div>
                                     }
                                 </div>
-                            </div>
+                           @* </div>
 
                             <div class="span3">
                                 <div id="toc"></div>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
                 </div>
             </div>
@@ -209,6 +209,6 @@
     <!--自动去cdn加载对应语言的代码高亮js-->
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/autoloader/prism-autoloader.min.js"></script>
     <!--TOC-->
-    <script src="~/tocify/libs/jqueryui/jquery-ui-1.9.1.custom.min.js"></script>
-    <script src="~/tocify/jquery.tocify.js"></script>
+    @*<script src="~/tocify/libs/jqueryui/jquery-ui-1.9.1.custom.min.js"></script>
+    <script src="~/tocify/jquery.tocify.js"></script>*@
 }
