--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -20,9 +20,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.27.0/plugins/line-numbers/prism-line-numbers.min.css">
     <!--图片等自适应-->
     <link rel="stylesheet" href="~/css/markdown.css">
+    <!--Blog post-->
+    <link rel="stylesheet" href="~/css/blogpost.css"/>
     <!--TOC-->
     @*<link rel="stylesheet" href="~/tocify/styles/bootstrap.css"/>
     <link rel="stylesheet" href="~/tocify/jquery.tocify.css"/>*@
+
 }
 
 <div class="row">
