--- a/src/Dotnet9.Web/wwwroot/css/blogpost.css
+++ b/src/Dotnet9.Web/wwwroot/css/blogpost.css
@@ -1,36 +1,39 @@
-﻿/*初始化格式*/
-
+﻿/* 全局属性
+ * 页边距 padding: 30px;
+ * 全文字体 font-family: ptima-Regular;
+ * 英文换行 word-break: break-all;
+ */
 #nice {
-    line-height: 1.6;
-    letter-spacing: .034em;
-    color: rgb(63, 63, 63);
-    font-size: 16px;
-    word-break: all;
+    font-size: 15px;
+    letter-spacing: 0.05em;
+    color: #595959
 }
 
+    /* 段落，下方未标注标签参数均同此处
+ * 上边距 margin-top: 5px;
+ * 下边距 margin-bottom: 5px;
+ * 行高 line-height: 26px;
+ * 词间距 word-spacing: 3px;
+ * 字间距 letter-spacing: 3px;
+ * 对齐 text-align: left;
+ * 颜色 color: #3e3e3e;
+ * 字体大小 font-size: 16px;
+ * 首行缩进 text-indent: 2em;
+ */
     #nice p {
-        padding-top: 23px;
-        color: rgb(74,74,74);
-        line-height: 1.75em;
+        margin: 1em 4px;
     }
 
     /* 一级标题 */
     #nice h1 {
-        text-align: center;
-        background-image: url(https://files.mdnice.com/mountain_2.png);
-        background-position: center top;
-        background-repeat: no-repeat;
-        background-size: 95px;
-        line-height: 95px;
-        margin-top: 38px;
-        margin-bottom: 10px;
+        margin: 1.2em 0 1em;
+        padding: 0;
+        font-weight: bold;
+        color: #35b378;
     }
 
         /* 一级标题内容 */
         #nice h1 .content {
-            font-size: 20px;
-            color: rgb(60, 112, 198);
-            border-bottom: 2px solid #3C7076;
         }
 
         /* 一级标题修饰 请参考有实例的主题 */
@@ -39,103 +42,94 @@
 
     /* 二级标题 */
     #nice h2 {
-        display: block;
-        text-align: center;
-        background-image: url(https://files.mdnice.com/mountain_2.png);
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-attachment: initial;
-        background-origin: initial;
-        background-clip: initial;
-        background-size: 63px;
-        margin-top: 38px;
-        margin-bottom: 10px;
+        bmin-height: 32px;
+        line-height: 32px;
+        border-bottom: solid 1px #000000;
+        color: #35b378;
+        display: inline-block;
+        border-bottom-width: 0px;
+        border-bottom-style: solid;
+        border-color: #35b378;
+        padding-top: 5px;
+        padding-right: 0.5em;
+        padding-left: 0.5em;
+        font-size: 23px;
+        margin: 1em 0 0rem 0;
+        padding: 0.5em 0;
+        text-align: leftt;
+        font-weight: bold;
     }
-
-        /*二级标题伪元素*/
-        #nice h2:before {
-        }
 
         /* 二级标题内容 */
         #nice h2 .content {
-            text-align: center;
-            display: inline-block;
-            height: 38px;
-            line-height: 42px;
-            color: rgb(60, 112, 198);
-            background-position: left center;
-            background-repeat: no-repeat;
-            background-attachment: initial;
-            background-origin: initial;
-            background-clip: initial;
-            background-size: 63px;
-            margin-top: 38px;
-            font-size: 18px;
-            margin-bottom: 10px;
+        }
+
+        /* 二级标题修饰 请参考有实例的主题 */
+        #nice h2:after {
         }
 
     /* 三级标题 */
-    #nice h3:before {
-        content: "";
-        background-image: url(https://files.mdnice.com/mountain_1.png);
-        background-size: 15px 15px;
-        display: inline-block;
-        width: 15px;
-        height: 15px;
-        line-height: 15px;
-        margin-bottom: -1px;
-    }
-
     #nice h3 {
+        margin: 1.2em 0 1em;
+        padding: 0;
+        font-weight: bold;
+        color: #35b378;
     }
 
         /* 三级标题内容 */
         #nice h3 .content {
-            font-size: 16px;
-            font-weight: bold;
-            display: inline-block;
-            margin-left: 8px;
-            color: rgb(60,112,198);
         }
 
         /* 三级标题修饰 请参考有实例的主题 */
         #nice h3:after {
         }
 
-    /* 列表内容 */
-    #nice li {
+    /* 无序列表整体样式
+ * list-style-type: square|circle|disc;
+ */
+    #nice ul {
+    }
+
+    /* 有序列表整体样式
+ * list-style-type: upper-roman|lower-greek|lower-alpha;
+ */
+    #nice ol {
+    }
+
+    /* 列表内容，不要设置li
+ */
+    #nice li section {
+        margin: 10px 0;
     }
 
     /* 引用
- * 左边缘颜色 border-left-color:black;
- * 背景色 background:gray;
+ * 左边缘颜色 border-left-color: black;
+ * 背景色 background: gray;
  */
     #nice .multiquote-1 {
-        padding: 15px 20px;
-        line-height: 27px;
-        background-color: rgb(239, 239, 239);
-        border-left: none;
-        display: block;
+        margin: 10px 5px;
+        border-left: 3px solid #35b378;
+        border-right: 0px solid #35b378;
+        color: #616161;
+        quotes: none;
+        background: #FBF9FD
     }
 
         /* 引用文字 */
         #nice .multiquote-1 p {
-            padding: 0px;
-            font-size: 15px;
-            color: rgb(89,89,89);
         }
 
-    /* 链接 */
+    /* 链接 
+ * border-bottom: 1px solid #009688;
+ */
     #nice a {
-        color: rgb(60, 112, 198);
-        text-decoration: none;
-        border-bottom: 1px solid rgb(60, 112, 198);
+        color: #35b378;
+        border-bottom: 1px solid #35b378;
     }
 
     /* 加粗 */
     #nice strong {
-        line-height: 1.75em;
-        color: rgb(74,74,74);
+        color: #35b378;
     }
 
     /* 斜体 */
@@ -144,114 +138,82 @@
 
         /* 加粗斜体 */
         #nice em strong {
-            color: rgb(248,57,41);
-            letter-spacing: 0.3em;
         }
 
     /* 删除线 */
     #nice del {
     }
 
-    /* 分割线 */
+    /* 分隔线
+ * 粗细、样式和颜色
+ * border-top: 1px solid #3e3e3e;
+ */
     #nice hr {
-        height: 1px;
-        padding: 0;
-        border: none;
-        text-align: center;
-        background-image: linear-gradient(to right,rgba(60,122,198,0),rgba(60,122,198,0.75),rgba(60,122,198,0));
+        border: 1px solid #35b378;
+        margin: 1.5em auto;
     }
 
-    /* 图片 */
+    /* 图片
+ * 宽度 width: 80%;
+ * 居中 margin: 0 auto;
+ * 居左 margin: 0 0;
+ */
     #nice img {
-        border-radius: 4px;
-        margin-bottom: 25px;
     }
 
     /* 图片描述文字 */
     #nice figcaption {
-        display: block;
-        font-size: 12px;
-        font-family: PingFangSC-Light;
     }
 
     /* 行内代码 */
     #nice p code, #nice li code {
-        color: rgb(60, 112, 198);
-        ;
+        color: #35b378;
     }
 
     /* 非微信代码块
- * 代码块不换行 display:-webkit-box !important;
- * 代码块换行 display:block;
+ * 代码块不换行 display: -webkit-box !important;
+ * 代码块换行 display: block;
  */
     #nice pre code {
     }
 
-    /* 表格内的单元格
+    /*
+ * 表格内的单元格
  * 字体大小 font-size: 16px;
  * 边框 border: 1px solid #ccc;
  * 内边距 padding: 5px 10px;
  */
     #nice table tr th,
     #nice table tr td {
-        font-size: 14px;
-    }
-
-    #nice .footnotes {
-        padding-top: 8px;
     }
 
     /* 脚注文字 */
     #nice .footnote-word {
-        color: rgb(60, 112, 198);
+        color: #35b378;
     }
 
     /* 脚注上标 */
     #nice .footnote-ref {
-        color: rgb(60, 112, 198);
-    }
-
-    /* 脚注超链接样式 */
-    #nice .footnote-item em {
-        color: rgb(60, 112, 198);
-        font-size: 13px;
-        font-style: normal;
-        border-bottom-color: 1px dashed rgb(60, 112, 198);
+        color: #35b378;
     }
 
     /* "参考资料"四个字 
  * 内容 content: "参考资料";
  */
     #nice .footnotes-sep:before {
-        background-image: none;
-        background-size: none;
-        display: block;
-        width: auto;
-        height: auto;
     }
 
     /* 参考资料编号 */
     #nice .footnote-num {
-        color: rgb(60, 112, 198);
     }
 
     /* 参考资料文字 */
     #nice .footnote-item p {
-        color: rgb(60, 112, 198);
-        font-weight: bold;
     }
 
-    /* 参考资料超链接 */
-    #nice .footnote-item a {
-        color: rgb(60, 112, 198);
-    }
-
-    /* 参考资料解释 */
-    #nice .footnote-item p em {
-        font-size: 14px;
-        font-weight: normal;
-        border-bottom: 1px dashed rgb(60, 112, 198);
-    }
+        /* 参考资料解释 */
+        #nice .footnote-item p em {
+        }
 
     /* 行间公式
  * 最大宽度 max-width: 300% !important;
@@ -259,14 +221,7 @@
     #nice .block-equation svg {
     }
 
-    /* 行内公式*/
-    #nice .inline-equation svg {
-    }
-
-    /* 滑动图片
+    /* 行内公式
  */
-    #nice .imageflow-img {
-        display: inline-block;
-        width: 100%;
-        margin-bottom: 0;
+    #nice .inline-equation svg {
     }
