--- a/src/Dotnet9.Web/Views/Error/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Error/Index.cshtml
@@ -31,7 +31,7 @@
                                 <p class="text-muted mt-3">
                                     看起来你可能拐错了方向。别担心，这里有一个也许能帮你重回正轨的小建议。
                                 </p>
-                                @await Html.PartialAsync("QueryForm")
+                                @await Html.PartialAsync("Public/QueryForm")
                             </div> <!-- end /.text-center-->
                         </div> <!-- end col-->
                     </div>
