--- a/src/Dotnet9.Web/Views/Home/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Home/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 
+<!-- banner begin-->
+@await Html.PartialAsync("Sidebars/BannerSidebar", Model.BlogPostsForRecommend)
+<!-- banner end-->
 <div class="row">
     <div class="col-12">
         <div class="card">
