--- a/src/Dotnet9.Web/Views/Shared/Components/ToolBar/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/ToolBar/Default.cshtml
@@ -98,4 +98,4 @@
         <i class="mdi mdi-menu"></i>
     </button>
 }
-@await Html.PartialAsync("QueryForm")
+@await Html.PartialAsync("Public/QueryForm")
