--- a/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/MenuHorizontal/Default.cshtml
@@ -1,70 +1,82 @@
 ﻿@model Dotnet9.Web.ViewModels.Homes.NavigationMenuViewModel
-
-<nav class="navbar navbar-dark navbar-expand-lg topnav-menu">
-
-    <div class="collapse navbar-collapse" id="topnav-menu-content">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle arrow-none" href="/tools" id="topnav-apps" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="uil-apps me-1"></i>工具
-                    <div class="arrow-down"></div>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="topnav-apps">
-                    @if (Model.ToolCountDtos != null)
+<nav>
+    <ul id="starlist">
+        <li>
+            <a href="/">网站首页</a>
+        </li>
+        <li class="menu">
+            <a href="/tool">在线工具</a>
+            <ul class="sub">
+                @if (Model.ToolCountDtos != null)
+                {
+                    @foreach (var toolItem in Model.ToolCountDtos)
                     {
-                        @foreach (var toolItem in Model.ToolCountDtos)
-                        {
-                            <a href="@toolItem.RelativeUrl" class="dropdown-item">@toolItem.Name</a>
-                        }
+                        <li>
+                            <a href="@toolItem.RelativeUrl">@toolItem.Name</a>
+                        </li>
                     }
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle arrow-none" href="/albums" id="topnav-apps" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="uil-apps me-1"></i>专辑
-                    <div class="arrow-down"></div>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="topnav-apps">
-                    @if (Model.AlbumCountDtos != null)
+                }
+            </ul><span></span>
+        </li>
+        <li class="menu">
+            <a href="/album">特色专辑</a>
+            <ul class="sub">
+                @if (Model.AlbumCountDtos != null)
+                {
+                    @foreach (var albumItem in Model.AlbumCountDtos)
                     {
-                        @foreach (var albumItem in Model.AlbumCountDtos)
-                        {
-                            <a href="/album/@albumItem.Slug" class="dropdown-item">@albumItem.Name</a>
-                        }
+                        <li>
+                            <a href="/album/@albumItem.Slug">@albumItem.Name</a>
+                        </li>
                     }
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle arrow-none" href="/blogposts" id="topnav-pages" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="uil-copy-alt me-1"></i>博客
-                    <div class="arrow-down"></div>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="topnav-pages">
-                    @if (Model.CategoryForMenuViewModels != null)
-                    {
-                        @foreach (var category in Model.CategoryForMenuViewModels)
+                }
+            </ul><span></span>
+        </li>
+        @if (Model.CategoryForMenuViewModels != null)
+        {
+            @foreach (var category in Model.CategoryForMenuViewModels)
+            {
+                <li class="menu">
+                    <a href="/cat/@category.Slug">@category.Name</a>
+                    <ul class="sub">
+                        @if (category.Children != null)
                         {
-                            @await Html.PartialAsync("/Views/Category/MenuHorizontalItem.cshtml", category)
+                            @foreach (var secondCategory in category.Children)
+                            {
+                                <li>
+                                    <a href="/cat/@secondCategory.Slug">@secondCategory.Name</a>
+                                </li>
+                            }
                         }
-                    }
-                </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle arrow-none" href="/about" id="topnav-layouts" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="uil-window me-1"></i>关于
-                    <div class="arrow-down"></div>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="topnav-layouts">
-                    <a href="/about" class="dropdown-item">关于</a>
-                    <a href="/donation" class="dropdown-item">赞助</a>
-                    <a href="/archive" class="dropdown-item">归档</a>
-                    <a href="/timeline" class="dropdown-item">时间轴</a>
-                    <a href="/sitemap.xml" class="dropdown-item">站点地图</a>
-                    <a href="/tag" class="dropdown-item">标签云</a>
-                    <a href="/privacy" class="dropdown-item">隐私政策</a>
-                </div>
-            </li>
-        </ul>
-    </div>
+                    </ul><span></span>
+                </li>
+            }
+        }
+        <li class="menu">
+            <a href="/about">关于我们</a>
+            <ul class="sub">
+                <li>
+                    <a href="/about">关于我们</a>
+                </li>
+                <li>
+                    <a href="/donation">赞助我们</a>
+                </li>
+                <li>
+                    <a href="/archive">文章归档</a>
+                </li>
+                <li>
+                    <a href="/timeline">时间轴</a>
+                </li>
+                <li>
+                    <a href="/sitemap.xml">站点地图</a>
+                </li>
+                <li>
+                    <a href="/tag">标签云</a>
+                </li>
+                <li>
+                    <a href="/privacy">隐私政策</a>
+                </li>
+            </ul><span></span>
+        </li>
+    </ul>
 </nav>
